# cnc

./: .gitignore  LICENSE  README.md  README.zh-CN.md  config.yaml  login.py  logout.py  main.py  pyproject.toml
cuit/: keep_logged_in.py  login.py  logout.py  main.py  stay_alive.py  test.py
powershell/: login.ps1  status.ps1
shell/: env.sh  login.sh
src/cnc/: client.py  get_status.py  login.py  logout.py  main.py  main.py.bak  portal_discovery.py  probe.py
src/cnc/keep_alive/: __init__.py  polling.py  relogin.py
systemd/: cnc_relogin.service  cnc_relogin.timer  keep_logged_in.service  keep_logged_in.timer
