[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "cnc"
version = "0.1.0"
description = "Campus network control (cnc)"
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
authors = [
  { name = "chao" }
]
classifiers = [
  "Programming Language :: Python :: 3",
  "License :: OSI Approved :: MIT License",
]
dependencies = [
  "requests>=2.31.0",
  "typer>=0.9.0",
  "rich>=13.0.0",
  "schedule>=1.2.0",
]

[project.scripts]
cnc = "cnc.main:main"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]

